--- a/design.css
+++ b/design.css
@@ -30,7 +30,7 @@ img{
     font-variant: normal; 
     text-transform: none; 
     background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 50%, rgb(20, 78, 117) 100%); 
-    box-shadow: rgb(36, 36, 36) 5px 5px 10px 5px;
+    box-shadow: rgb(36, 36, 36) 3px 3px 7px 3px;
     border: 2px solid rgb(100, 110, 164); 
     display: inline-block;
     float: right;
@@ -41,3 +41,38 @@ img{
 .extractionButton:active {
     background: #144E75; 
 }
+
+.lds-hourglass {
+    padding-top: 20%;
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
+    left: 50%;
+}
+
+.lds-hourglass:after {
+    content: " ";
+    display: block;
+    border-radius: 50%;
+    width: 0;
+    height: 0;
+    margin: 6px;
+    box-sizing: border-box;
+    border: 26px solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: lds-hourglass 1.2s infinite;
+  }
+  @keyframes lds-hourglass {
+    0% {
+      transform: rotate(0);
+      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    }
+    50% {
+      transform: rotate(900deg);
+      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    100% {
+      transform: rotate(1800deg);
+    }
+  }
