--- a/chart.css
+++ b/chart.css
@@ -1,11 +1,19 @@
 .switch {
     position: relative;
-    display: inline-block;
+    display: block;
     width: 120px;
     height: 34px;
+    margin: 20px;
   }
   
   .switch input {display:none;}
+
+  .message{
+    height: 25px; 
+    width: 100px;
+    border:5px solid gray;
+
+  }
   
   .slider {
     position: absolute;
