--- a/chart.css
+++ b/chart.css
@@ -8,11 +8,31 @@
   
   .switch input {display:none;}
 
-  .message{
+  .triggerMessage{
     height: 25px; 
-    width: 100px;
-    border:5px solid gray;
+    width: 970px;
+    float: right;
+    margin: 10px;
+    padding: 5px;
+    border:5px solid royalblue;
 
+  }
+
+  .informMessage{
+    height: 25px; 
+    width: 970px;
+    float: right;
+    margin: 10px;
+    padding: 5px;
+    border:5px solid firebrick;
+
+  }
+
+  .plot{
+    height: 500px; 
+    width: 1000px ;
+    background-color: rgba(189,183,107,0.1) ;
+    float:right;
   }
   
   .slider {
