css for loading

--- a/design.css
+++ b/design.css
@@ -78,3 +78,11 @@ img{
     border: 2px solid rgb(100, 110, 164);   
 }
 
+.load {
+    padding-top: 20%;
+    padding-left:20%;
+    display: inline-block;
+    width: 64px;
+    height: 64px;
+    left: 50%;
+}
