--- a/design.css
+++ b/design.css
@@ -24,6 +24,22 @@ img{
     background: #144E75; 
 }
 
+#summary{
+    border:5px solid black;
+    padding: 10px;
+    margin-top: 0%;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-bottom: 50px;
+}
+
+table, th, td {
+    border: 1px solid whitesmoke;
+    padding: 5px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .lds-hourglass {
     padding-top: 20%;
     display: inline-block;
