--- a/chart.css
+++ b/chart.css
@@ -128,3 +128,38 @@ input:checked + .slider .off{
 .tabcontent:hover{
   background-color: #440286; 
 }
+
+.numselect {
+  margin-top: 10px;
+  margin-left: 20px;
+  background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+  height: 29px;
+  overflow: hidden;
+  width: 120px;
+  background-color: #3b8ec2;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+.numselect select {
+  background: transparent;
+  border: none;
+  font-size: 14px;
+  height: 29px;
+  padding: 5px;
+  width: 148px;
+} 
+
+.numselect.slate {
+  background: url(http://i62.tinypic.com/2e3ybe1.jpg) no-repeat right center;
+  height: 34px;
+  width: 120px;
+}
+
+.numselect.slate select {
+  border: 1px solid #ccc;
+  font-size: 16px;
+  height: 34px;
+  width: 148px;
+}
