--- a/chart.css
+++ b/chart.css
@@ -10,8 +10,8 @@
 
 .triggerMessage{
     height: 50px; 
-    width: 970px;
-    float: right;
+    width: 1040px;
+    float: left;
     margin: 10px;
     padding: 5px;
     border:5px solid royalblue;
@@ -20,8 +20,8 @@
 
 .informMessage{
     height: 80px; 
-    width: 970px;
-    float: right;
+    width: 1040px;
+    float: left;
     margin: 10px;
     padding: 5px;
     border:5px solid firebrick;
@@ -29,18 +29,18 @@
 }
 
 .title{
-  width: 970px;
+  width: 1050px;
   height: 20px;
-  float: right;
+  float: left;
   padding: 5px;
   font-size: 17px;
 }
 
 .plot{
-    height: 500px; 
-    width: 980px;
+    height: 550px; 
+    width: 1050px;
     background-color: rgba(169,169,169,0.5);
-    float:right;
+    float:left;
 }
   
 .slider {
