result box border for prediction

--- a/design.css
+++ b/design.css
@@ -27,7 +27,7 @@ img{
 }
 
 #summary{
-    border:5px solid black;
+    border: 3px solid rgb(47, 52, 78);
     padding: 10px;
     margin-top: 0%;
     margin-right: 30px;
